public/stylesheets/style.less
@cyan: #01f0ff;
@darkBlue: #0a2535;
@pink: #f74085;

html {
    height: 100%;
}

body {
    font: 40px Lato, sans-serif;
    font-weight: 300;
    color: fadeout(white, 30%);
    background-color: @darkBlue;
    line-height: 1.5em;
    height: 100%;
    margin: 0;
    padding: 0;
}

a {
    color: @pink;
}

h1 {
    font-size: 2em;
}

h1, h2, h3 {
    color: @pink;
    font-weight: 300;
    line-height: 1.2em;
    margin: 0 0 0.5em 0;
}

p, ul, ol {
    margin: 0 0 0.5em 0;
}

code, pre {
    background-color: lighten(@darkBlue, 3%);
    border: 1px solid lighten(@darkBlue, 5%);
    padding: 0.1em 0.3em;
    border-radius: 0.15em;
    font-family: 'Ubuntu Mono', Inconsolata, 'Courier New', Courier, fixed-width;
    line-height: 1.2em;
}

.presentation {
    height: 100%;

    .slides {
        position: relative;
        width: 100%;
        height: 100%;
        overflow: hidden;

        .slide {
            position: absolute;
            width: 100%;
            &.past {
                left: -100%;
            }
            &.current {
                left: 0;
            }
            &.future {
                left: 200%;
            }
            .slide-content {
                padding: 2em;
            }
        }

    }

    &.states-set {
        // Only perform transitions when starting classes have been applied
        .slide {
            transition: left 500ms;
            -webkit-transition: left 500ms;
            -moz-transition: left 500ms;
            -o-transition: left 500ms;
        }
    }

}

